--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Flask==2.3.3
 Flask-CORS==4.0.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
-Werkzeug==2.3.7
+Werkzeug==3.0.1
 PyJWT==2.8.0
 passlib==1.7.4
 requests==2.32.3
 reportlab==4.2.5
+deep-translator==1.11.4
